--- a/package.json
+++ b/package.json
@@ -28,20 +28,23 @@
     "babel-preset-stage-2": "^6.11.0",
     "cpy-cli": "^1.0.1",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
     "npm-run-all": "^2.3.0",
     "postcss": "^5.0.21",
     "postcss-cssnext": "^2.7.0",
     "postcss-loader": "^0.9.1",
     "rimraf": "^2.5.2",
+    "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.15",
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-validator": "^2.2.2"
   },
   "dependencies": {
     "@cycle/dom": "^10.0.5",
-    "xstream": "^5.1.0",
     "@cycle/rxjs-run": "^3.0.2",
-    "@reactivex/rxjs": "^5.0.0-beta.9"
+    "@reactivex/rxjs": "^5.0.0-beta.9",
+    "normalize.css": "^4.2.0",
+    "xstream": "^5.1.0"
   }
 }
