--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@cycle/rxjs-run": "^3.0.2",
     "@reactivex/rxjs": "^5.0.0-beta.9",
     "normalize.css": "^4.2.0",
+    "rxjs": "^5.0.0-beta.10",
+    "rxjs-es": "^5.0.0-beta.10",
     "xstream": "^5.1.0"
   }
 }
