--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@cycle/dom": "^10.0.5",
+    "@cycle/isolate": "^1.4.0",
     "@cycle/rxjs-run": "^3.0.2",
     "normalize.css": "^4.2.0",
     "rxjs": "^5.0.0-beta.10",
