--- a/package.json
+++ b/package.json
@@ -22,30 +22,32 @@
   "author": "José Luis Lafuente",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.10.4",
+    "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015-webpack": "^6.4.1",
+    "babel-preset-es2015-webpack": "^6.4.2",
     "babel-preset-stage-2": "^6.11.0",
     "cpy-cli": "^1.0.1",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "html-webpack-plugin": "^2.22.0",
     "npm-run-all": "^2.3.0",
-    "postcss": "^5.0.21",
+    "postcss": "^5.1.1",
+    "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-loader": "^0.9.1",
-    "rimraf": "^2.5.3",
+    "postcss-reporter": "^1.4.1",
+    "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.15",
+    "webpack": "^2.1.0-beta.20",
     "webpack-dev-server": "^2.1.0-beta.0",
-    "webpack-validator": "^2.2.2"
+    "webpack-validator": "^2.2.6"
   },
   "dependencies": {
-    "@cycle/dom": "^10.0.5",
+    "@cycle/dom": "^12.0.0",
     "@cycle/isolate": "^1.4.0",
     "@cycle/rxjs-run": "^3.0.2",
     "normalize.css": "^4.2.0",
     "rxjs": "^5.0.0-beta.10",
-    "xstream": "^5.1.4"
+    "xstream": "^5.3.2"
   }
 }
