--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
-  "presets": ["es2015-webpack", "stage-2"],
+  "presets": [
+    ["es2015", {"modules": false}],
+     "stage-2"],
   "env": {
     "test": {
     }
