--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015-webpack": "^6.4.2",
+    "babel-preset-es2015": "^6.4.2",
     "babel-preset-stage-2": "^6.11.0",
     "cpy-cli": "^1.0.1",
     "css-loader": "^0.23.1",
