--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
   "name": "cycle-boilerplate",
   "version": "1.0.0",
+  "babel": {
+    "presets": [
+      [
+        "es2015",
+        {
+          "modules": false
+        }
+      ],
+      "stage-2"
+    ],
+    "env": {
+      "test": {}
+    }
+  },
   "description": "Cycle.js boileplate with webpack",
   "main": "index.js",
   "scripts": {
@@ -24,7 +38,7 @@
   "devDependencies": {
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.4.2",
+    "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-2": "^6.11.0",
     "cpy-cli": "^1.0.1",
     "css-loader": "^0.23.1",
