Add Dashboard plugin

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "copy-files": "cpy src/favicon.ico dist",
     "clean-and-copy": "npm run clean-dist && npm run copy-files",
     "prestart": "npm run clean-and-copy",
-    "start": "webpack-dev-server --env.dev --content-base dist",
+    "start": "webpack-dashboard -- webpack-dev-server --env.dev --content-base dist",
     "prebuild": "npm run clean-and-copy",
     "prebuild:prod": "npm run clean-and-copy",
-    "build": "webpack --env.dev",
+    "build": "webpack-dashboard -- webpack --env.dev",
     "build:prod": "webpack --env.prod",
     "lint": "eslint .",
     "validate": "npm-run-all --parallel validate-webpack:*",
@@ -54,6 +54,7 @@
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.20",
     "webpack-config-utils": "^2.0.0",
+    "webpack-dashboard": "0.1.1",
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-validator": "^2.2.6"
   },
