--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "css-loader": "^0.24.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "html-webpack-plugin": "^2.22.0",
+    "npm-check-updates": "^2.8.0",
     "npm-run-all": "^3.0.0",
     "postcss": "^5.1.2",
     "postcss-browser-reporter": "^0.5.0",
