--- a/package.json
+++ b/package.json
@@ -36,35 +36,35 @@
   "author": "José Luis Lafuente",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.13.2",
+    "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-2": "^6.13.0",
     "cpy-cli": "^1.0.1",
-    "css-loader": "^0.24.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.3",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "html-webpack-plugin": "^2.22.0",
     "npm-check-updates": "^2.8.0",
-    "npm-run-all": "^3.0.0",
-    "postcss": "^5.1.2",
+    "npm-run-all": "^3.1.0",
+    "postcss": "^5.2.2",
     "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^2.7.0",
-    "postcss-loader": "^0.10.1",
+    "postcss-cssnext": "^2.8.0",
+    "postcss-loader": "^0.13.0",
     "postcss-reporter": "^1.4.1",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.21",
-    "webpack-config-utils": "^2.0.0",
-    "webpack-dashboard": "^0.1.8",
-    "webpack-dev-server": "^2.1.0-beta.0",
-    "webpack-validator": "^2.2.7"
+    "webpack": "^2.1.0-beta.25",
+    "webpack-config-utils": "^2.1.0",
+    "webpack-dashboard": "^0.2.0",
+    "webpack-dev-server": "^2.1.0-beta.7"
   },
   "dependencies": {
-    "@cycle/dom": "12.2.1",
+    "@cycle/dom": "12.2.5",
     "@cycle/isolate": "1.4.0",
+    "@cycle/rxjs-adapter": "3.0.3",
     "@cycle/rxjs-run": "3.0.3",
     "normalize.css": "4.2.0",
-    "rxjs": "5.0.0-beta.11",
-    "xstream": "6.1.0"
+    "rxjs": "5.0.0-beta.12",
+    "xstream": "6.4.0"
   }
 }
