--- a/package.json
+++ b/package.json
@@ -36,36 +36,36 @@
   "author": "José Luis Lafuente",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-2": "^6.13.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
     "cpy-cli": "^1.0.1",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "html-webpack-plugin": "^2.22.0",
-    "npm-check-updates": "^2.8.0",
-    "npm-run-all": "^3.1.0",
-    "postcss": "^5.2.2",
+    "html-webpack-plugin": "^2.24.1",
+    "npm-check-updates": "^2.8.6",
+    "npm-run-all": "^3.1.1",
+    "postcss": "^5.2.5",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.8.0",
-    "postcss-loader": "^0.13.0",
-    "postcss-reporter": "^1.4.1",
+    "postcss-loader": "^1.1.1",
+    "postcss-reporter": "^2.0.0",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.25",
+    "webpack": "^2.1.0-beta.26",
     "webpack-config-utils": "^2.1.0",
     "webpack-dashboard": "^0.2.0",
-    "webpack-dev-server": "^2.1.0-beta.7"
+    "webpack-dev-server": "^2.1.0-beta.11"
   },
   "dependencies": {
-    "@cycle/dom": "12.2.5",
+    "@cycle/dom": "14.0.0",
     "@cycle/isolate": "1.4.0",
     "@cycle/rxjs-adapter": "3.0.3",
     "@cycle/rxjs-run": "3.0.3",
-    "glamor": "^2.17.14",
-    "normalize.css": "4.2.0",
-    "rxjs": "5.0.0-beta.12",
-    "xstream": "6.4.0"
+    "glamor": "^2.17.15",
+    "normalize.css": "5.0.0",
+    "rxjs": "5.0.0-rc.3",
+    "xstream": "7.0.0"
   }
 }
