--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.27",
+    "webpack-bundle-analyzer": "^1.5.3",
     "webpack-config-utils": "^2.1.0",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-server": "^2.1.0-beta.11"
