--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
+    "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
     "cpy-cli": "^1.0.1",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "html-webpack-plugin": "^2.24.1",
     "npm-check-updates": "^2.8.6",
@@ -57,13 +57,13 @@
     "webpack-dev-server": "^2.1.0-beta.11"
   },
   "dependencies": {
-    "@cycle/dom": "14.0.0",
+    "@cycle/dom": "14.1.0",
     "@cycle/isolate": "1.4.0",
     "@cycle/rxjs-adapter": "3.0.3",
     "@cycle/rxjs-run": "3.0.3",
-    "glamor": "^2.17.15",
+    "glamor": "2.18.2",
     "normalize.css": "5.0.0",
-    "rxjs": "5.0.0-rc.3",
-    "xstream": "7.0.0"
+    "rxjs": "5.0.0-rc.4",
+    "xstream": "8.0.0"
   }
 }
