--- a/package.json
+++ b/package.json
@@ -9,7 +9,19 @@
           "modules": false
         }
       ],
-      "stage-2"
+      "stage-2",
+      [
+        "env",
+        {
+          "targets": {
+            "browsers": [
+              "last 2 versions",
+              "ie >= 11"
+            ]
+          },
+          "modules": false
+        }
+      ]
     ],
     "env": {
       "test": {}
@@ -35,35 +47,35 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
+    "babel-preset-env": "^1.1.4",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
     "cpy-cli": "^1.0.1",
     "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "html-webpack-plugin": "^2.24.1",
-    "npm-check-updates": "^2.8.6",
     "npm-run-all": "^3.1.1",
     "postcss": "^5.2.5",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^1.1.1",
-    "postcss-reporter": "^2.0.0",
+    "postcss-reporter": "^3.0.0",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.27",
-    "webpack-bundle-analyzer": "^1.5.3",
+    "webpack": "2.2.0-rc.1",
+    "webpack-bundle-analyzer": "^2.2.0",
     "webpack-config-utils": "^2.1.0",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-server": "^2.1.0-beta.11"
   },
   "dependencies": {
-    "@cycle/dom": "14.1.0",
+    "@cycle/dom": "^14.2.0",
     "@cycle/isolate": "1.4.0",
-    "@cycle/rxjs-adapter": "3.0.3",
-    "@cycle/rxjs-run": "3.0.3",
-    "glamor": "2.18.2",
+    "@cycle/rxjs-adapter": "^3.1.0",
+    "@cycle/rxjs-run": "3.1.0",
+    "glamor": "^2.20.12",
     "normalize.css": "5.0.0",
-    "rxjs": "5.0.0-rc.4",
-    "xstream": "8.0.0"
+    "rxjs": "^5.0.1",
+    "xstream": "^9.2.0"
   }
 }
